--- a/notes/notes_topics/notes_pages/CAD_notes.html
+++ b/notes/notes_topics/notes_pages/CAD_notes.html
@@ -125,7 +125,7 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
-                <h3><u><b>3D modelling for creating 'virtual' products:</b></u></h3>
+                <h3 id="3Dmodelling"><u><b>3D modelling for creating 'virtual' products:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -154,7 +154,7 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
-                <h3><u><b>Wire frame models (CAD):</b></u></h3>
+                <h3 id="Wireframemodels"><u><b>Wire frame models (CAD):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -179,7 +179,7 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
-                <h3><u><b>Surface modelling (CAD):</b></u></h3>
+                <h3 id="Surfacemodeling"><u><b>Surface modelling (CAD):</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -208,8 +208,8 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b>Finite Element Analysis (FEA):</b> FEA is a computer run numerical method used to predict how an object/structure will behave under given conditions (e.g. loads and stresses). It can be used to find weak spots in designs and points of failure.</h3>
-                <h3><b>Computational fluid dynamics (CFD):</b> CFD is a computer run numerical method used to study how steady and unsteady fluids (e.g. Gas and Liquids) flow over objects. It is often used for aerodynamic study.</h3>
+                <h3 id="FiniteElementAnalysis"><b>Finite Element Analysis (FEA):</b> FEA is a computer run numerical method used to predict how an object/structure will behave under given conditions (e.g. loads and stresses). It can be used to find weak spots in designs and points of failure.</h3>
+                <h3 id="Computationalfluiddynamics"><b>Computational fluid dynamics (CFD):</b> CFD is a computer run numerical method used to study how steady and unsteady fluids (e.g. Gas and Liquids) flow over objects. It is often used for aerodynamic study.</h3>
 
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
