--- a/notes/notes_topics/notes_pages/CAM_notes.html
+++ b/notes/notes_topics/notes_pages/CAM_notes.html
@@ -124,7 +124,7 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
-                <h3><u><b>CNC machines:</b></u></h3>
+                <h3 id="CNCMachines"><u><b>CNC machines:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -153,7 +153,7 @@
                 <div class="notes-content-subheader">
                     <h2><hr><hr></h2>
                 </div>
-                <h3><u><b>Rapid prototyping (3D printing):</b></u></h3>
+                <h3 id="Rapidprototyping"><u><b>Rapid prototyping (3D printing):</b></u></h3>
                 <table>
                     <li>Models made using computer-based technology such as a 3D printer<br><br/></li>
                     <tr class="notes-table-header">
