--- a/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
+++ b/notes/notes_topics/notes_pages/Influence_of_design_anthropometrics_notes.html
@@ -97,7 +97,7 @@
                         <li>Can be gathered by designers for certain genders/groups</li>
                     </ul></h3>
 
-                    <div class="notes-content-picture" >
+                    <div id="Anthropometricdata" class="notes-content-picture" >
                         <img src="../../../images/bellcurve.png" alt="Diagram of shape dimensions">
                     </div>
 
@@ -106,15 +106,15 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Ergonomic factors for a designer to consider when developing products and environments with which humans react:</b></u></h3>
+                    <h3 id="Ergonomics"><b><u>Ergonomic factors for a designer to consider when developing products and environments with which humans react:</b></u></h3>
                 <h3><ul>
                         <li>Ergonomics is the study of how people interact with products and their working environment</li>
                         <li>Matching the product to user</li>
                         <li>Improves peoples lives by increasing their comfort and satisfaction</li>
                         <li>Data about the size and shape of the human body is required (anthropometrics)</li>
                     </ul></h3>
-                    <h3>A <b><u>quantitative</u></b> (measurable) approach predicts the physical fit of the product to the human body shape, encompassing workload, speed of performance and errors</u></h3>
-                    <h3>A <b><u>qualitative</u></b> (opinion based) approach predicts user comfort and their satisfaction with the product, so it has the optimum interaction with the user</u></h3>
+                    <h3 id="Quantitative">A <b><u>quantitative</u></b> (measurable) approach predicts the physical fit of the product to the human body shape, encompassing workload, speed of performance and errors</u></h3>
+                    <h3 id="Qualitative">A <b><u>qualitative</u></b> (opinion based) approach predicts user comfort and their satisfaction with the product, so it has the optimum interaction with the user</u></h3>
                     <h3><b>Uses:</b> Ergonomic handles, chairs, computer desk heights</u></h3>
                     <div class="notes-content-subheader">
                         <h2><hr><hr></h2>
