--- a/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
+++ b/notes/notes_topics/notes_pages/design_influences_methods_and_figures_factors_influencing_the_development_of_products_notes.html
@@ -101,7 +101,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Arts & Crafts (William Morris):</b></u></h3>
+                <h3 id="ArtsCrafts"><b><u>Arts & Crafts (William Morris):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>Fitness for purpose</li>
                     <li>Form follows function</li>
@@ -120,7 +120,7 @@
                     <li>Showing joints/grain</li>
                     <li>Bespoke</li>
                 </ul>
-                <h3>Art & Crafts figure - <b>William Morris</b>:</h3>
+                <h3 id="WilliamMorris">Art & Crafts figure - <b>William Morris</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>Socialist</li>
                     <li>Poet/writer/designer/innovator</li>
@@ -135,7 +135,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Art Nouveau (Charles Rennie Mackintosh):</b></u></h3>
+                <h3 id="ArtNouveau"><b><u>Art Nouveau (Charles Rennie Mackintosh):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>Languid lines</li>
                     <li>Formulation of new aesthetic values for a new urban lifestyle</li>
@@ -151,7 +151,7 @@
                     <li>Languid feminine form</li>
                     <li>Based on leaves/flowers/exotic insects/peacock feathers</li>
                 </ul>
-                <h3>Art Nouveau figure - <b>Charles Rennie Mackintosh</b>:</h3>
+                <h3 id="CharlesRennieMackintosh">Art Nouveau figure - <b>Charles Rennie Mackintosh</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>Scottish architect and designer</li>
                     <li>Studied at the Glasgow School of Art</li>
@@ -163,7 +163,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Bauhaus Modernist (Marianna Brandt):</b></u></h3>
+                <h3 id="BauhausModernist"><b><u>Bauhaus Modernist (Marianna Brandt):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>Functionalism</li>
                     <li>Reducing to the most essential elements omiting decorative thrills</li>
@@ -180,7 +180,7 @@
                     <li>Products for the machine age</li>
                     <li>Everday objects for everyday people</li>
                 </ul>
-                <h3>Bauhaus Modernist figure - <b>Marianna Brandt</b>:</h3>
+                <h3 id="MariannaBrandt">Bauhaus Modernist figure - <b>Marianna Brandt</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>German sculpturer/painter/photographer/designer</li>
                     <li>Studied at Bauhaus school</li>
@@ -193,7 +193,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Art Deco (Eileen Gray):</b></u></h3>
+                <h3 id="ArtDeco"><b><u>Art Deco (Eileen Gray):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>1925-1939</li>
                     <li>Originated in France</li>
@@ -214,7 +214,7 @@
                     <li>Symmetry and repeating patterns</li>
                     <li>Ancient Egypt/Aztec influences</li>
                 </ul>
-                <h3>Art Deco figure - <b>Eileen Gray</b>:</h3>
+                <h3 id="EileenGray">Art Deco figure - <b>Eileen Gray</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>1878-1976</li>
                     <li>Famous for Bibendum chair/Dragon chair</li>
@@ -226,7 +226,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Post Modernism (Philippe Starck):</b></u></h3>
+                <h3 id="PostModernism"><b><u>Post Modernism (Philippe Starck):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>1975 to present day</li>
                     <li>All over the world it has a specific name</li>
@@ -246,7 +246,7 @@
                     <li>Bright/colourful</li>
                     <li>Taking ideas from the past</li>
                 </ul>
-                <h3>Post Modernism figure - <b>Philippe Starck</b>:</h3>
+                <h3 id="PhilippeStarck">Post Modernism figure - <b>Philippe Starck</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>Career started in the 1980s</li>
                     <li>Worked for Alessi design company</li>
@@ -261,7 +261,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Streamlining (Raymond Lowey):</b></u></h3>
+                <h3 id="Streamlining"><b><u>Streamlining (Raymond Lowey):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>1935 - 1955</li>
                     <li>Started in the USA</li>
@@ -277,7 +277,7 @@
                     <li>Mass production</li>
                     <li>New machinery used</li>
                 </ul>
-                <h3>Streamlining figure - <b>Raymond Lowey</b>:</h3>
+                <h3 id="RaymondLowey">Streamlining figure - <b>Raymond Lowey</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>Worked on designs from 1910 - 1980</li>
                     <li>Streamlined trains for the Pennsylvania railroad</li>
@@ -289,7 +289,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Memphis (Ettore Scotsass):</b></u></h3>
+                <h3 id="Memphis"><b><u>Memphis (Ettore Scotsass):</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>1981 - 1988</li>
                     <li>Originated in Italy</li>
@@ -310,7 +310,7 @@
                     <li>Avoids 'natural' materials</li>
 
                 </ul>
-                <h3>Memphis figure - <b>Ettore Scotsass</b>:</h3>
+                <h3 id="EttoreScotsass">Memphis figure - <b>Ettore Scotsass</b>:</h3>
                 <ul style="font-size: medium;">
                     <li>Worked 1980 - 1990 on Memphis</li>
                     <li>Designed before and after but in different styles</li>
