--- a/notes/notes_topics/notes_pages/influence_of_aesthetics_notes.html
+++ b/notes/notes_topics/notes_pages/influence_of_aesthetics_notes.html
@@ -87,7 +87,7 @@
                 <div class="notes-content-intro">
                 </div>
 
-                <h3><b><u>Form over function:</b></u></h3>
+                <h3 id="Formoverfunction"><b><u>Form over function:</b></u></h3>
                 <h3><ul>
                         <li>Aesthetics over functionality</li>
                         <li>Aethetics as prime diver</li>
@@ -99,7 +99,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Form follows function:</b></u></h3>
+                    <h3 id="Formfollowsfunction"><b><u>Form follows function:</b></u></h3>
                 <h3><ul>
                         <li>Functionality over aethetics</li>
                         <li>Functionality as prime driver</li>
