--- a/notes/notes_topics/notes_pages/methods_of_production_notes.html
+++ b/notes/notes_topics/notes_pages/methods_of_production_notes.html
@@ -156,7 +156,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>One-off production:</b></u></h3>
+                <h3 id="Oneoff"><b><u>One-off production:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -186,7 +186,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Batch production:</b></u></h3>
+                <h3 id="Batch"><b><u>Batch production:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -216,7 +216,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Mass production:</b></u></h3>
+                <h3 id="Massp"><b><u>Mass production:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
@@ -247,7 +247,7 @@
                     <h2><hr><hr></h2>
                 </div>
 
-                <h3><b><u>Continuous production:</b></u></h3>
+                <h3 id="Continuousp"><b><u>Continuous production:</b></u></h3>
                 <table>
                     <tr class="notes-table-header">
                         <th>Advantages</th>
