--- a/notes/notes_topics/notes_pages/safe_working_notes.html
+++ b/notes/notes_topics/notes_pages/safe_working_notes.html
@@ -87,8 +87,8 @@
                 <div class="notes-content-intro">
                     <h2>The following page of notes will cover:</h2>
                     <ul style="font-size: medium;">
-                        <li>Safe working practice</li>
-                        <li>Understanding the need for risk assessments</li>
+                        <li id="SafeWorkingPractice">Safe working practice</li>
+                        <li id="UnderstandingNeedRiskAssessments">Understanding the need for risk assessments</li>
                     </ul>
                 </div>
 
@@ -120,13 +120,13 @@
                     <li>Use machinery in line with training instructions</li>
                     <li>Report any accidents, near misses or dangerous events</li></ul>
 
-                <h3><b><u>Training:</b></u></h3>
+                <h3 id="Training"><b><u>Training:</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>Employees trained in safe use of machinery and equipment</li>
                     <li>Training may be done in-house</li>
                     <li>May require formal certification</li></ul>
 
-                <h3><b><u>Machine maintenance and guarding:</b></u></h3>
+                <h3 id="MachineMaintenanceGuarding"><b><u>Machine maintenance and guarding:</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>All machinery part of regular maintenance</li>
                     <li>Blades are replaced as required</li>
@@ -135,14 +135,14 @@
                     <li>Machinery should have correct guards to protect employee</li>
                     <li>Could use micro switches (laser cutter, turns it off)</li></ul>
 
-                <h3><b><u>Extraction systems:</b></u></h3>
+                <h3 id="ExtractionSystems"><b><u>Extraction systems:</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>If workshop processes produce any dust/fumes extraction must be produced</li>
                     <li>Extraction systems ensure timber dust/welding fumes are extracted at the source</li>
                     <li>Stops harmful airbrone particles being inhaled</li>
                     <li>Extraction systems must be regularly maintained, usually done by an external company on a 12-14 month schedule</li></ul>
 
-                <h3><b><u>Provision of PPE:</b></u></h3>
+                <h3 id="ProvisionPPE"><b><u>Provision of PPE:</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>Employers should ensure that personal protective equipment is available to any employee</li>
                     <li>Can include safety helmets, eye protection, dust masks, respiratory equipment, high visibility clothing, safety footwear and gloves</li>
@@ -151,7 +151,7 @@
                     <li>Provided with instructions on how to use it safely</li>
                     <li>Used correctly by employees</li></ul>
 
-                <h3><b><u>General safe working practices:</b></u></h3>
+                <h3 id="GeneralSafeWorkingPractices"><b><u>General safe working practices:</b></u></h3>
                 <ul style="font-size: medium;">
                     <li>Work areas should be kept clean/neat/free of hazards</li>
                     <li>Spillages should be reported</li>
@@ -166,7 +166,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Health and Safety Executive (HSE):</b></u></h3>
+                    <h3 id="HealthSafetyExecutive"><b><u>Health and Safety Executive (HSE):</b></u></h3>
                     <p>The HSE are a national independent watchdog for work related health, safety and illness</p>
                 <ul style="font-size: medium;">                    
                     <li>The HSE helps companies and employers to meet health and safety obligations</li>
@@ -176,7 +176,7 @@
                         <h2><hr>Understanding the need for risk assessmnets<hr></h2>
                     </div>
 
-                    <h3><b><u>Identification of potential hazards:</b></u></h3>
+                    <h3 id="IdentificationPotentialHazards"><b><u>Identification of potential hazards:</b></u></h3>
                     <p>Use risk assessments to identify potential hazards in the workplace (must be reviewed regularly)</p>
                 <ul style="font-size: medium;">                    
                     <li>Risk assessments must be carried out by law, and should be recorded where there are 5 or more employees</li>
@@ -184,7 +184,7 @@
                     <li>Considers whether reasonable steps are being taken to prevent injury</li>
                     <li>Employers can't remove all risks - must identify the risks and try to minimise the risk of injury</li></ul>
 
-                    <h3><b><u>Identifying the people at risk:</b></u></h3>
+                    <h3 id="IdentifyingPeopleAtRisk"><b><u>Identifying the people at risk:</b></u></h3>
                     <p>The employee:</p>
                 <ul style="font-size: medium;">                    
                     <li>Machines malfunctioning</li>
@@ -202,17 +202,17 @@
                     <li>To help protect the user, many products have specific legislation and standards that specify certain requirements that the product must meet</li>
                     <li>The include suitable safety levels and the right for the consumer to get their money back if goods are found to be faulty or do not perform as the manyfacturer claims</li></ul>
 
-                    <h3><b><u>Evaluation of risk:</b></u></h3>
+                    <h3 id="EvaluationRisk"><b><u>Evaluation of risk:</b></u></h3>
                     <p>If there is a potential risk, they are evaluated to see how they could be reduced or prevented (e.g. flying debris prevented by machinery guards)</p>
 
-                    <h3><b><u>Risk assessmnets:</b></u></h3>
+                    <h3 id="RiskAssessments"><b><u>Risk assessmnets:</b></u></h3>
                 <ul style="font-size: medium;">                    
                     <li>Employer required to carry out risk assessmnet by law where there are 5 or more employers</li>
                     <li>Considers what might cause harm</li>
                     <li>Considers what reasonable steps are taken to prevent harm</li>
                     <li>Not all risks can be eliminated, however, reasoable practicable measures to identify potential hazards and minimise the risk can be undertaken</li></ul>
 
-                    <h3><b><u>Implement control methods:</b></u></h3>
+                    <h3 id="ImplementControlMethods"><b><u>Implement control methods:</b></u></h3>
                 <ul style="font-size: medium;">                    
                     <li>Guards properly maintained</li>
                     <li>Machinery properly maintained</li>
@@ -220,7 +220,7 @@
                     <li>Rules in job place</li>
                     <li>Following HSE advice/guidlines</li></ul>
 
-                    <h3><b><u>Recording and storing of risk assessmnet documentation:</b></u></h3>
+                    <h3 id="RecordingStoringRiskAssessmentDocumentation"><b><u>Recording and storing of risk assessmnet documentation:</b></u></h3>
                     <p>Documentation of risks and how to store item must be recorded and stored in the workplace (e.g. COSHH data sheets, BSI, CE, ISO)</p>
 
                     <div class="notes-content-subheader">
