--- a/notes/notes_topics/notes_pages/user_centred_design_notes.html
+++ b/notes/notes_topics/notes_pages/user_centred_design_notes.html
@@ -98,7 +98,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Purpose:</b></u></h3>
+                    <h3 id="Purpose"><b><u>Purpose:</b></u></h3>
                 <h3><ul>
                         <li>The purpose of the product should be central to the design, otherwise the product will not meet the specification</li>
                         <li>User is heart of decision making, the design should still fulfil its purpose though</li>
@@ -108,7 +108,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Functionality:</b></u></h3>
+                    <h3 id="Functionality"><b><u>Functionality:</b></u></h3>
                 <h3><ul>
                         <li>How the product will be used</li>
                         <li>What functions it will perform</li>
@@ -120,7 +120,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Innovation:</b></u></h3>
+                    <h3 id="Innovation"><b><u>Innovation:</b></u></h3>
                 <h3><ul>
                         <li>New designs by mixing things together (phone used battery/camera/telephone into one)</li>
                         <li>Used to solve a problem</li>
@@ -132,7 +132,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Authenticity:</b></u></h3>
+                    <h3 id="Authenticity"><b><u>Authenticity:</b></u></h3>
                 <h3><ul>
                     <li>All aspects of the process are being valued by the user</li>
                     <li>Being truly designed with user in mind</li>
