--- a/notes/notes_topics/notes_pages/product_life_cycle_notes.html
+++ b/notes/notes_topics/notes_pages/product_life_cycle_notes.html
@@ -97,7 +97,7 @@
                 </div>
 
                     <div class="notes-content-subheader">
-                        <h2><hr>Material selection<hr></h2>
+                        <h2 id="MaterialSelection"><hr>Material selection<hr></h2>
                     </div>
 
                 <h3><b>Source:</b>
@@ -141,7 +141,7 @@
 
     
                     <div class="notes-content-subheader">
-                        <h2><hr>Manufacture<hr></h2>
+                        <h2 id="Manufacture"><hr>Manufacture<hr></h2>
                     </div>
 
                 <h3><b>Minimising energy use:</b>
@@ -174,7 +174,7 @@
 
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Distribution<hr></h2>
+                    <h2 id="Distribution"><hr>Distribution<hr></h2>
                 </div>
 
             <h3><b>Efficient use of packaging:</b>
@@ -200,7 +200,7 @@
 
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Use<hr></h2>
+                    <h2 id="Use"><hr>Use<hr></h2>
                 </div>
 
             <h3><b>Repair vs replacement:</b>
@@ -229,7 +229,7 @@
                 <p>The <b>energy efficiency</b> of appliances is rated in terms of energy efficiency classes from <b>A - G</b> on the label, A being the <b>most</b> energy efficient, G the <b>least</b> efficient</p></h3>
  
             <div class="notes-content-subheader">
-                <h2><hr>Repair and maintenance<hr></h2>
+                <h2 id="RepairMaintenance"><hr>Repair and maintenance<hr></h2>
             </div>
 
             <h3><b>Standardisation:</b>
@@ -254,7 +254,7 @@
                 </ul>
 
             <div class="notes-content-subheader">
-                <h2><hr>End of life<hr></h2>
+                <h2 id="EndOfLife"><hr>End of life<hr></h2>
             </div>
     
             <h3><b>Design for disassembly:</b>
