--- a/notes/notes_topics/notes_pages/wider_issues_tech_notes.html
+++ b/notes/notes_topics/notes_pages/wider_issues_tech_notes.html
@@ -88,7 +88,7 @@
                 </div>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Cost implications to the consumer and manufacturer<hr></h2>
+                    <h2 id=CostImplicationsofSust><hr>Cost implications to the consumer and manufacturer<hr></h2>
                 </div>
                 
                 
@@ -101,7 +101,7 @@
                     </ul></h3>
 
                     <div class="notes-content-subheader">
-                        <h2><hr>Sustainability<hr></h2>
+                        <h2 id="Sustainability"><hr>Sustainability<hr></h2>
                     </div>
 
                 <h3><b>Designing without jeopardising the potential for people in the future to meet their needs:</b>
