--- a/notes/notes_topics/notes_pages/quality_control_systems_notes.html
+++ b/notes/notes_topics/notes_pages/quality_control_systems_notes.html
@@ -93,7 +93,7 @@
                 </div>
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Quality control<hr></h2>
+                    <h2 id="QualityControl"><hr>Quality control<hr></h2>
                 </div>
                 <h3>
                     <ul>
@@ -129,7 +129,7 @@
                 </table>
                 <h3><b>Applications: </b>Casting parts, products, car engines<br><br></h3>
 
-                <h3><b><u>Inspection:</b></u></h3>
+                <h3 id="Inspection"><b><u>Inspection:</b></u></h3>
                 <h3>
                     <p>Used to check that manufactured products have been produced with a tolerance (e.g. +/- 5mm)</p>
                     <ul>
@@ -138,11 +138,11 @@
                         <li>Reduced inspection - every 10,000<sup>th</sup> product, used when the level of quality is 'sufficiently good'</li>
                     </ul></h3>
 
-                <h3><b><u>Computer-aided inspection:</b></u></h3>
+                <h3 id="ComputerAidedInspection"><b><u>Computer-aided inspection:</b></u></h3>
                 <h3>
                     <p>Uses a coordinate measuring machine (CMM) for dimensional measuring. Laser scanning machine are similar to CMM.</p>
 
-                <h3><b><u>Testing/checks:</b></u></h3>
+                <h3 id="TestingChecks"><b><u>Testing/checks:</b></u></h3>
                 <h3>
                     <p>Measures the products performance</p>
                     <ul>
@@ -158,24 +158,24 @@
                     </ul></h3>
 
                 <h3>
-                    <p>Reducing cost of testing:</p>
+                    <p id="ReducingCostTesting">Reducing cost of testing:</p>
                     <ul>
                         <li>Only test sampling method</li>
                         <li>Use of gauges (reduces delays)</li>
                         <li>Limit destructive testing (less labour needed)</li>
                     </ul></h3>
 
-                    <h3><b><u>Non-destructive testing:</b></u></h3>
+                    <h3 id="NonDestructiveTesting"><b><u>Non-destructive testing:</b></u></h3>
                 <h3>
                     <p>Where the product is tested until it shows signs of failure (cracking etc)</p>
 
-                    <h3><b><u>Destructive testing:</b></u></h3>
+                    <h3 id="DestructiveTesting"><b><u>Destructive testing:</b></u></h3>
                 <h3>
                     <p>Where the product is tested until it is destroyed</p>
 
 
                 <div class="notes-content-subheader">
-                    <h2><hr>Quality assurance<hr></h2>
+                    <h2 id="QualityAssurance"><hr>Quality assurance<hr></h2>
                 </div>
 
                 <h3>
@@ -221,7 +221,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>Total quality management (TQM):</b></u></h3>
+                    <h3 id="TotalQualityManagementTQM"><b><u>Total quality management (TQM):</b></u></h3>
                 <h3>
                     <ul>
                         <li>Used to help achieve customer satisfaction by applying quality assurance procedures at every stage</li>
@@ -264,7 +264,7 @@
                         <h2><hr><hr></h2>
                     </div>
 
-                    <h3><b><u>ISO 9000:</b></u></h3>
+                    <h3 id="ISOnine"><b><u>ISO 9000:</b></u></h3>
                 <h3>
                     <ul>
                         <li>Defined as a set of internatioanl standards on quality management and quality assurance</li>
